# OpenGLWrapper

./: .gitmodules  CMakeLists.txt
3rdPart/glad/: CMakeLists.txt
3rdPart/glad/include/glad/: glad.h
3rdPart/glad/src/: glad.c
3rdPart/stb/: CMakeLists.txt
Lessons/Lesson02/: CMakeLists.txt
Lessons/Lesson02/src/: main.cpp
Lessons/Lesson03/: CMakeLists.txt
Lessons/Lesson03/src/: main.cpp
Lessons/Lesson03/src/resources/: fs.frag  vs.vert
Lessons/Lesson03/src/resources/old/: fs.frag  vs.vert
Lessons/Lesson03/src/resources/working/: vs.vert
Lessons/Lesson04/: CMakeLists.txt
Lessons/Lesson04/src/: main.cpp
Lessons/Lesson04/src/resources/: vs.vert
Lessons/Lesson05/: CMakeLists.txt
Lessons/Lesson05/src/: main.cpp
Lessons/Lesson05/src/resources/: fs.frag
Lessons/Lesson06/: CMakeLists.txt
Lessons/Lesson06/src/: main.cpp
Lessons/Lesson06/src/resources/: fs.frag  fs_light.frag  fs_material.frag  vs.vert
Lessons/Lesson07/: CMakeLists.txt
Lessons/Lesson07/src/: main.cpp
Lessons/Lesson07/src/resources/: fs.frag  vs.vert
Lessons/Lesson08/: CMakeLists.txt
Lessons/Lesson08/src/: main.cpp
Lessons/Lesson08/src/resources/: fs_light_directional.frag  fs_light_mixed.frag  fs_light_pointlight.frag  fs_light_spotlight.frag  fs_material.frag  vs.vert
Lessons/Lesson09/: CMakeLists.txt
Lessons/Lesson09/src/: main.cpp
Lessons/Lesson09/src/resources/: fs_light_mixed.frag
Lessons/Lesson10/: CMakeLists.txt
Lessons/Lesson10/src/: main.cpp
Lessons/Lesson10/src/resources/: fs.frag  vs.vert
OpenGLHelper/: CMakeLists.txt
OpenGLHelper/include/: Camera.h  FlyCameraControler.h  IInputHandler.h  Image.h  ImageLoader.h  Program.h  Scene.h  SceneLoader.h  Texture2D.h  TextureType.h  VertexArrayObject.h  WindowContext.h
OpenGLHelper/src/: Camera.cpp  FlyCameraControler.cpp  Image.cpp  ImageLoader.cpp  Logger.cpp  Logger.h  Program.cpp  Scene.cpp  SceneLoader.cpp  Texture2D.cpp  Utilities.cpp  Utilities.h  VertexArrayObject.cpp  WindowContext.cpp  main.cpp
include/: IRenderer.h  Program.h  VertexArrayObject.h
src/: IRenderer.cpp  Program.cpp  VertexArrayObject.cpp  WindowContext.cpp  main.cpp
src/lessons/: lesson02_triangle.cpp  lesson03_textures.cpp
src/shaders/: fs.frag
